(INTERNAL) Change the dialog that pops up with Tcl/Tk errors to Ttk
(ENHANCE) Ported the 'delete project' question dialog to Ttk
(ENHANCE) Ported the 'new project' dialog to use Ttk widgets
(ENHANCE) Update the project management window to use Ttk widgets
(INTERNAL) Add tile extension for Ttk widgets support
(ENHANCE) Use, for the time being,  Tk default fonts
(BUG FIX) Fix the Help->Online manuals menu entry
(INTERNAL) Update tkTable to version 2.10
(INTERNAL) Update xmplib.c from Tix source following former SN versions
(INTERNAL) Add losts of CONSTs and casts to prevent compile warnings
(INTERNAL) Update the initialization of itcl classes to the current syntax
(INTERNAL) Allow access to internal commands in Tcl/Tk 8.4
(INTERNAL) Update Tix to version 8.4.3
(INTERNAL) Update [incr tcl] to version 3.4.1 and [incr tk] to 3.4.0
(INTERNAL) Update Tcl/Tk to version 8.4.19

Release NG4.5 (Sun Oct 14 09:39:57 CEST 2012)

(ENHANCE) Add new function to sn.el for direct jump to implementation
(ENHANCE) Add Bernd Kiefer to CONTRIBUTORS
(BUGFIX) Fix external_editor to deal with space in path under win32, part II
(BUGFIX) Fix --noxref to actually not build and xref information
(BUGFIX) Fix return code of main() call chain


Release NG4.4 (Sat Jun 11 21:01:24 CEST 2011)

(ENHANCE) Make "Remove References" and "Remove Referenced-by" icons nicer
(BUGFIX) Fix frizzy edges of splashsn2.gif for more awesome arrows
(INTERNAL) Merge https://svn.berlios.de/svnroot/repos/sourcenav/branches/SN-NG4.3-xrefpane-enhancements, r819-829
(INTERNAL) Remove unneeded itcl/iwidgets3.0.0 from source
(BUGFIX) Fix dbcompact to deal with invalid DB files, part II
(BUGFIX) Fix dbcompact to deal with invalid DB files
(BUGFIX) REVERT-Fix batchmode to work around missing DISPLAY env variables
(INTERNAL) Add Montaseri to CONTRIBUTORS
(BUGFIX) Fix batchmode to work around missing DISPLAY env variables
(INTERNAL) Add testcases for know bad behaviour